--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # HTTP 통신 패키지
+  dio: ^5.3.2
+  # 상태 관리 패키지
+  provider: ^6.0.5
+  # 위치 정보 패키지
+  geolocator: ^10.0.1
+  # URL 실행 패키지
+  url_launcher: ^6.1.14
+  # 이미지 캐싱 패키지
+  cached_network_image: ^3.3.0
+  # 환경 변수 패키지
+  flutter_dotenv: ^5.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,9 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
